// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card type="card"/> renders default card type with explicit card type 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  border-style: solid;
  border-width: 2px;
  border-radius: 0;
  padding: 2em 1em;
  display: block;
}

@media (min-width:720px) {
  .c0 {
    padding: 2em;
    border-radius: 4px;
  }
}

<div
  class="c0"
  type="card"
>
  <div>
    Content
  </div>
</div>
`;

exports[`<Card type="card"/> renders default card type with implicit card type with no a11y violations 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  border-style: solid;
  border-width: 2px;
  border-radius: 0;
  padding: 2em 1em;
  display: block;
}

@media (min-width:720px) {
  .c0 {
    padding: 2em;
    border-radius: 4px;
  }
}

<div
  class="c0"
  type="card"
>
  <div>
    Content
  </div>
</div>
`;

exports[`<Card type="card"/> renders the card type with multiple props 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  border-style: solid;
  border-width: 2px;
  border-radius: 0;
  padding: 2em 1em;
  display: block;
}

@media (min-width:720px) {
  .c0 {
    padding: 2em;
    border-radius: 4px;
  }
}

<div
  class="c0"
  type="card"
>
  <div>
    Content
  </div>
</div>
`;

exports[`<Card type="linkCard"/> renders default linkCard 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  border-style: solid;
  border-width: 2px;
  border-radius: 0;
  padding: 2em 1em;
  display: block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width:720px) {
  .c0 {
    padding: 2em;
    border-radius: 8px;
  }
}

<div
  class="c0"
  type="linkCard"
/>
`;

exports[`<Card type="linkCard"/> renders the component with props 1`] = `
.c0 {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
  border-style: solid;
  border-width: 2px;
  border-radius: 0;
  padding: 2em 1em;
  display: block;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width:720px) {
  .c0 {
    padding: 2em;
    border-radius: 8px;
  }
}

<div
  class="c0"
  type="linkCard"
>
  <div>
    Content
  </div>
</div>
`;
